logs/dag_id=etl_MusicStreamPipeline/run_id=manual__2025-02-09T134414.352600+0000/task_id=MusicStream_load_song/attempt=1.log
[2025-02-09T13:44:20.242+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2025-02-09T13:44:20.265+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: etl_MusicStreamPipeline.MusicStream_load_song manual__2025-02-09T13:44:14.352600+00:00 [queued]>
[2025-02-09T13:44:20.362+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: etl_MusicStreamPipeline.MusicStream_load_song manual__2025-02-09T13:44:14.352600+00:00 [queued]>
[2025-02-09T13:44:20.363+0000] {taskinstance.py:2303} INFO - Starting attempt 1 of 1
[2025-02-09T13:44:20.376+0000] {taskinstance.py:2327} INFO - Executing <Task(PythonOperator): MusicStream_load_song> on 2025-02-09 13:44:14.352600+00:00
[2025-02-09T13:44:20.381+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=2678) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2025-02-09T13:44:20.382+0000] {standard_task_runner.py:63} INFO - Started process 2680 to run task
[2025-02-09T13:44:20.381+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'etl_MusicStreamPipeline', 'MusicStream_load_song', 'manual__2025-02-09T13:44:14.352600+00:00', '--job-id', '618', '--raw', '--subdir', 'DAGS_FOLDER/etl_dag.py', '--cfg-path', '/tmp/tmp3d5glbhd']
[2025-02-09T13:44:20.383+0000] {standard_task_runner.py:91} INFO - Job 618: Subtask MusicStream_load_song
[2025-02-09T13:44:20.418+0000] {task_command.py:426} INFO - Running <TaskInstance: etl_MusicStreamPipeline.MusicStream_load_song manual__2025-02-09T13:44:14.352600+00:00 [running]> on host e231ebee4370
[2025-02-09T13:44:20.481+0000] {taskinstance.py:2644} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Le Huynh Thanh Duong' AIRFLOW_CTX_DAG_ID='etl_MusicStreamPipeline' AIRFLOW_CTX_TASK_ID='MusicStream_load_song' AIRFLOW_CTX_EXECUTION_DATE='2025-02-09T13:44:14.352600+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-02-09T13:44:14.352600+00:00'
[2025-02-09T13:44:20.482+0000] {taskinstance.py:430} INFO - ::endgroup::
[2025-02-09T13:44:20.531+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2025-02-09T13:44:20.532+0000] {taskinstance.py:2890} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/etls/load.py", line 70, in load_dim_songs
    cur.execute(artists_key_select, (row.artist_id,))
psycopg2.errors.SyntaxError: syntax error at or near "rowiscurrent"
LINE 1: ...im_artists WHERE artist_id = 'ARD7TVE1187B99BFB1' rowiscurre...
                                                             ^

[2025-02-09T13:44:20.540+0000] {taskinstance.py:1205} INFO - Marking task as FAILED. dag_id=etl_MusicStreamPipeline, task_id=MusicStream_load_song, execution_date=20250209T134414, start_date=20250209T134420, end_date=20250209T134420
[2025-02-09T13:44:20.549+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 618 for task MusicStream_load_song (syntax error at or near "rowiscurrent"
LINE 1: ...im_artists WHERE artist_id = 'ARD7TVE1187B99BFB1' rowiscurre...
                                                             ^
; 2680)
[2025-02-09T13:44:20.597+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2025-02-09T13:44:20.622+0000] {taskinstance.py:3482} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-02-09T13:44:20.626+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
